fix(SHS-6324): better class name and alignment in highlighted label

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/base/_forms.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/base/_forms.scss
@@ -1,5 +1,5 @@
 label,
-.preact-label {
+.select-preact__label {
   @include hb-heading-5;
 
   display: block;
