--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/tools/_mixins.text.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/tools/_mixins.text.scss
@@ -192,6 +192,7 @@
 
   text-transform: inherit;
   color: var(--palette--secondary);
+  align-items: baseline;
 
   .hb-well {
     color: var(--palette--secondary-darken-12) !important;
